--- a/TopCategories/www/css/style.css
+++ b/TopCategories/www/css/style.css
@@ -13,7 +13,7 @@ body {
 .container {
     margin: 0px 120px;
     background-color: white;
-    height: 550px;
+    min-height: 550px;
     border: 2px solid white;
     box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 15px 10px 0 rgb(26 26 26 / 12%);
 }
@@ -63,8 +63,7 @@ footer {
 }
 
 .valuecontainer {
-    height: 450px;
-    margin: 30px 20% 20px 10%;
+    margin: 30px 10% 20px 10%;
 }
 
 
@@ -73,9 +72,17 @@ footer {
 .liste_top_block {
     list-style: none;
     display: flex;
-    height: inherit;
     flex-direction: column;
     justify-content: space-evenly;
+    overflow-anchor: auto;
+}
+
+.adder {
+    background-color: green;
+    margin-top: 30px;
+    padding: 10px 15px;
+    margin-left: 15px;
+    color: white;
 }
 
 .top {
@@ -92,10 +99,58 @@ a {
 }
 
 .Titre {
-    margin-left: 15%;
+    margin-left: 0;
+    margin-bottom: 15px;
 }
 
 .Texte_titre {
-    width: 100%;
+    width: 99%;
     height: 25px;
+    padding-left: 0;
+    padding-right: 0;
+    text-align: center;
+    font-weight: bold;
+}
+
+.smallblock {
+    width: 100%;
+    height: 150px;
+    box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 7px 7px 0 rgb(26 26 26 / 12%);
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.imagesBlock {
+    height: inherit;
+    width: 40%;
+    border-right: 1px dashed black;
+    border-left: 1px dashed black;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.texte_block {
+    height: 140px;
+    width: 55%;
+    font-style: oblique;
+    font-weight: bold;
+    border: 0px;
+    padding: 0;
+    border-right: 1px dashed black;
+    border-left: 1px dashed black;
+    border-radius: 20px;
+    padding: 5px 5px;
+    text-align: center;
+}
+
+.imageInput {
+    height: inherit;
+    opacity: 0;
+}
+
+.realImage {
+    height: inherit;
+    width: 100%;
+    opacity: 1;
 }
