--- a/TopCategories/www/css/style.css
+++ b/TopCategories/www/css/style.css
@@ -91,6 +91,7 @@ footer {
     padding: 4px;
     background-color: wheat;
     text-align: center;
+    margin-bottom: 15px;
 }
 
 a {
@@ -115,7 +116,7 @@ a {
 .smallblock {
     width: 100%;
     height: 150px;
-    box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 7px 7px 0 rgb(26 26 26 / 12%);
+    box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 13px 7px 0 rgb(26 26 26 / 12%);
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
