--- a/TopCategories/www/css/style.css
+++ b/TopCategories/www/css/style.css
@@ -11,18 +11,22 @@ body {
 }
 
 .container {
-    margin: 0px 120px;
+    margin: 20px 100px 0px 100px;
     background-color: white;
     min-height: 550px;
     border: 2px solid white;
     box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 15px 10px 0 rgb(26 26 26 / 12%);
+    border-bottom-left-radius:15px ;
+    border-bottom-right-radius:15px ;
 }
 
 .hearder1 {
     background-color: skyblue;
     margin-left: 0px;
+    margin-bottom: 50px;
     height: 50px;
     display: flex;
+    position: sticky;
     justify-content: space-between;
     box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 20px 7px 0 rgb(26 26 26 / 12%);
 }
@@ -44,13 +48,19 @@ body {
 .plus {
     height: 40px;
 }
-
+ul{
+    padding-inline-start:15px;
+    padding-inline-end: 15px;
+}    
 footer {
-    height: 100px;
-    width: 100%;
+    height: 60px;
     align-self: flex-end;
-    margin-top: 10px;
-    background-color: rgb(99, 94, 94);
+    margin: 10px 100px 0px 100px ;
+    background-color:skyblue;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: auto;
+
 }
 
 .offline {
@@ -63,7 +73,7 @@ footer {
 }
 
 .valuecontainer {
-    margin: 30px 10% 20px 10%;
+    margin: 30px 10% ;
 }
 
 
@@ -154,4 +164,33 @@ a {
     height: inherit;
     width: 100%;
     opacity: 1;
+}
+
+
+@media only screen and (max-width:640px){
+    footer{
+        height:50px;
+        background-color:skyblue;
+        margin: 7px 7px 0px 7px;
+        border-top-left-radius: 7px;
+        border-top-right-radius: 7px;
+        width: auto;
+
+    }
+
+    .container {
+        margin: 0px 10px;
+        margin: 5px 10px 0px 10px;
+        background-color: white;
+        min-height: 647px;
+        border: 2px solid white;
+        border-bottom-left-radius:7px ;
+        border-bottom-right-radius:7px ;
+        box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 15px 10px 0 rgb(26 26 26 / 12%);
+    }
+
+    .valuecontainer {
+        margin: 25px 3% ;
+    }
+    
 }
