--- a/TopCategories/www/css/style.css
+++ b/TopCategories/www/css/style.css
@@ -13,7 +13,7 @@ body {
 .container {
     margin: 20px 100px 0px 100px;
     background-color: white;
-    min-height: 550px;
+    min-height: 620px;
     border: 2px solid white;
     box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 15px 10px 0 rgb(26 26 26 / 12%);
     border-bottom-left-radius:15px ;
@@ -59,7 +59,7 @@ footer {
     background-color:skyblue;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    width: auto;
+    width: initial;
 
 }
 
